# simple-dynamic-dns-aws

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  docker_build.sh  pyproject.toml
.github/actions/setup-environment/: action.yaml
.github/workflows/: pipeline.yaml
aws/: lambda_function.py
container/: Dockerfile  utils.py
lambda/: lambda_function.py
opentofu/: .env-example  .terraform.lock.hcl  aws_secrets.tf  credentials.auto.tfvars.example  credentials.tf  locals.tf  main.tf  outputs.tf  provider.tf  providers.tf  route53_policy.json  secrets_manager_policy.json  variables.tf
tests/: conftest.py  constants.py  test_lambda_handler.py  utils.py
tests/integration/: conftest.py  test_container.py  test_lambda_function_url.py
tests/unit/: conftest.py  test_lambda_handler.py
