[tool.poetry]
name = "dynamic-dns-aws"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"
boto3 = "1.34.153"
aws-secretsmanager-caching = "1.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"
pytest = "8.3.2"
pytest-mock = "3.14.0"
pytest-dotenv = "0.5.2"
python-on-whales = "0.72.0"
ruff = "0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
