[tool.poetry]
name = "simple-dynamic-dns-aws"
version = "1.0.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"
boto3 = "1.37.33"
aws-secretsmanager-caching = "1.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"
pytest-dotenv = "0.5.2"
python-on-whales = "0.73.0"
ruff = "0.11.2"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
