[tool.poetry]
name = "simple-dynamic-dns-aws"
version = "1.0.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"
boto3 = "1.38.41"
aws-secretsmanager-caching = "1.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytest-mock = "3.14.1"
pytest-dotenv = "0.5.2"
python-on-whales = "0.77.0"
ruff = "0.12.1"
requests = "^2.32.3"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
